# TELEKINETIC-CONTROL-GLOVE-FOR-CARS

car/: CMakeLists.txt
car/include/: buzzer.h  led.h  motor_driver.h  tcp_server.h  ultrasonic.h
car/src/: buzzer.c  led.c  main.c  motor_driver.c  tcp_server.c  ultrasonic.c
glove/: CMakeLists.txt
glove/include/: MPU6050.h  lwipopts.h  tcp_client.h
glove/src/: MPU6050.c  main.c  tcp_client.c
